# fileshiftlib

./: .gitignore  Cargo.toml  DEV.md  README.md  pyproject.toml
.github/workflows/: CI.yml
fileshiftlib/: __main__.py  fileshift.py
logsteplib/: __init__.py  __main__.py
old_python_version/: CI.yml  __init__.py  fileshift.py
src/: lib.rs  models.rs  python_bindings.rs
tests/: test_smoke.py
