[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fileshiftlib"
dynamic = ["version"]
requires-python = ">=3.10"
description = "SFTP client powered by Rust and PyO3."
readme = "README.md"
authors = [{ name = "Paulo Portela", email = "portela.paulo@gmail.com" }]
maintainers = [{ name = "Paulo Portela", email = "portela.paulo@gmail.com" }]
license = "BSD-3-Clause"
keywords = ["SFTP", "Python", "Rust", "File Transfer", "SSH"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = []
[project.optional-dependencies]
dev = ["twine", "build", "pytest"]

[tool.maturin]
features = ["python"]

[tool.maturin.sdist-include]
# Exclude the old Python implementation from source distributions
exclude = ["old_python_version"]

[project.urls]
Homepage = "https://github.com/aghuttun/fileshiftlib"
Documentation = "https://github.com/aghuttun/fileshiftlib/blob/main/README.md"
